--- a/app/src/main/res/menu/action_bar_search_example_menu.xml
+++ b/app/src/main/res/menu/action_bar_search_example_menu.xml
@@ -10,8 +10,7 @@
         app:showAsAction="ifRoom|collapseActionView" />
 
     <item
-        android:id="@+id/app_bar_menu_share"
-        android:title="Share"
-        app:showAsAction="never"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
+        android:id="@+id/app_bar_menu_clear_search_history"
+        android:title="Clear history"
+        app:showAsAction="never" />
 </menu>
